forcus oon safari fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,6 +64,21 @@
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
   }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="password"],
+  input[type="number"],
+  input[type="search"],
+  input[type="tel"],
+  input[type="url"],
+  textarea {
+    font-size: 16px;
+  }
+  
+  select:focus {
+    font-size: 16px;
+  }
 }
  
 @layer base {
